# kronmult

./: CMakeLists.txt  README.md  kgemm_nn.cpp  kgemm_nn.hpp  kgemm_nn_batched.cpp  kgemm_nn_batched.hpp  kgemm_nt.cpp  kgemm_nt.hpp  kgemm_nt_batched.cpp  kgemm_nt_batched.hpp  kroncommon.hpp  kronmult1.hpp  kronmult1_batched.cpp  kronmult1_batched.hpp  kronmult1_pbatched.cpp  kronmult1_pbatched.hpp  kronmult1_xbatched.cpp  kronmult1_xbatched.hpp  kronmult2.hpp  kronmult2_batched.cpp  kronmult2_batched.hpp  kronmult2_pbatched.cpp  kronmult2_pbatched.hpp  kronmult2_xbatched.cpp  kronmult2_xbatched.hpp  kronmult3.hpp  kronmult3_batched.cpp  kronmult3_batched.hpp  kronmult3_pbatched.cpp  kronmult3_pbatched.hpp  kronmult3_xbatched.cpp  kronmult3_xbatched.hpp  kronmult4.hpp  kronmult4_batched.cpp  kronmult4_batched.hpp  kronmult4_pbatched.cpp  kronmult4_pbatched.hpp  kronmult4_xbatched.cpp  kronmult4_xbatched.hpp  kronmult5.hpp  (+18 more)
.github/workflows/: ci_tests.yaml
